<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFiLocation</string>
    <string name="action_settings">Quit</string>
    <string name="basic_map">basic map</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="star">Star</string>
    <string name="setting">Setting</string>
    <string name="notify">上滑可以进入首页</string>
    <string name="star_user_info">Do one thing do it well!</string>
    <string name="star_user_name">wazying</string>
    <string name="star_user_like">我的收藏</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>

</resources>