<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:ignore="UseCompoundDrawables" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#2ea3fe"
                android:contentDescription="@string/app_name" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/title_bar_left_menu"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/titlebar_menu_selector"
                    android:onClick="onTitleBarClick" />

                <TextView
                    android:id="@+id/head_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="7dp"
                    android:text="@string/home"
                    android:textColor="#999999"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/title_bar_right_menu"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/titlebar_menu_selector"
                    android:onClick="onTitleBarClick" />
            </FrameLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#ebebeb"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <com.wtu.jazzyviewpager.JazzyViewPager
            android:id="@+id/jazzy_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:background="@color/gray" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ebebeb"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:baselineAligned="false" >

            <RelativeLayout
                android:id="@+id/home_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/home_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/tab_home_normal" />

                    <TextView
                        android:id="@+id/home_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/home"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/map_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/map_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/tab_map_normal" />

                    <TextView
                        android:id="@+id/map_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/map"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/star_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/star_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/tab_star_normal" />

                    <TextView
                        android:id="@+id/star_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/star"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/setting_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/tab_settings_normal" />

                    <TextView
                        android:id="@+id/setting_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/setting"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <com.wtu.customview.PullDoorView
        android:id="@+id/myImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffdddddd" >

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/notify"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </com.wtu.customview.PullDoorView>

</FrameLayout>